# agentloft

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  pr-title.yml  publish-extension.yml  update-badges.yml
e2e/: global-setup.ts
e2e/helpers/: launch.ts
server/__tests__/: hookEventHandler.test.ts
server/src/: constants.ts  hookEventHandler.ts
server/src/providers/file/: claudeHookInstaller.ts
src/: PixelAgentsViewProvider.ts  agentManager.ts  assetLoader.ts  constants.ts  fileWatcher.ts  layoutPersistence.ts  transcriptParser.ts  types.ts
tauri-app/: package.json
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: lib.rs
webview-ui/: package-lock.json  package.json
webview-ui/src/: App.tsx  browserMock.ts  constants.ts  index.css
webview-ui/src/components/: BottomToolbar.tsx  SettingsModal.tsx
webview-ui/src/components/ui/: ColorPicker.tsx
webview-ui/src/hooks/: useEditorActions.ts  useExtensionMessages.ts
webview-ui/src/office/: colorize.ts  floorTiles.ts  types.ts  wallTiles.ts
webview-ui/src/office/components/: OfficeCanvas.tsx  ToolOverlay.tsx
webview-ui/src/office/editor/: EditorToolbar.tsx
webview-ui/src/office/engine/: characters.ts  officeState.ts  renderer.ts
webview-ui/src/office/layout/: layoutSerializer.ts
webview-ui/src/office/sprites/: spriteData.ts
